[gd_scene load_steps=6 format=3 uid="uid://bwulfswkp185v"]

[ext_resource type="PackedScene" uid="uid://dxspf3653vgjx" path="res://scenes/characters/enemies/enemy/enemy.tscn" id="1_7b5ba"]
[ext_resource type="Script" uid="uid://bgdufvineu8xt" path="res://scenes/characters/enemies/square_enemy/square_enemy.gd" id="2_ke3jm"]
[ext_resource type="PackedScene" uid="uid://cmrlwjtvnu1ep" path="res://scenes/objects/weapons/square_enemy_weapon/square_enemy_weapon.tscn" id="3_0shrc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qlr2w"]
size = Vector2(29, 29)

[sub_resource type="CircleShape2D" id="CircleShape2D_0shrc"]
radius = 25.0

[node name="SquareEnemy" instance=ExtResource("1_7b5ba")]
script = ExtResource("2_ke3jm")
shoot_duration = 0.5
min_distance_to_target = 200.0
collide_damage = 15
recoverable_target_health = 20
character_name = "Square"
speed = 200.0
health = 70
max_health = 70

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("RectangleShape2D_qlr2w")

[node name="ShootTimer" type="Timer" parent="Timers" index="1"]
unique_name_in_owner = true

[node name="CollisionShape2D" parent="AttackArea" index="0"]
shape = SubResource("CircleShape2D_0shrc")

[node name="Weapons" type="Node" parent="." index="7"]

[node name="SquareEnemyWeapon" parent="Weapons" index="0" node_paths=PackedStringArray("parent") instance=ExtResource("3_0shrc")]
unique_name_in_owner = true
parent = NodePath("../..")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="8"]
unique_name_in_owner = true
path_max_distance = 10000.0
avoidance_enabled = true
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 1, 1)

[connection signal="timeout" from="Timers/ShootTimer" to="." method="_on_shoot_timer_timeout"]
